# exams

00/: a.out  aff_a.c  aff_first_param.c  aff_last_param.c  ft_countdown.c  ft_print_numbers.c
01/: a.out  first_word.c  ft_putstr.c  ft_strcpy.c  ft_strlen.c  ft_swap.c  main.c  repeat_alpha.c  rev_print.c  rot_13.c  rotone.c  search_and_replace.c  test.c  tets.c  ulstr.c
02/: .inter.c.swp  a.out  alpha_mirror.c  ft_atoi.c  ft_strcmp.c  ft_strdup.c  inter.c  last_word.c  max.c  print_bits.c  swap_bits.c  test.c
03/: a.out  add_prime_sum.c  epur_str.c  expand_str.c  ft_list.h  ft_list_size.c  ft_rrange.c  hidenp.c  pgcd.c  print_hex.c  str_capitaliser.c
04/: .ft_list_remove_if.c.swp  CMakeLists.txt  a.out  brainfuck.c  brainfuck222.c  flood_fill.c  flood_fill.h  fprime.c  ft_itoa.c  ft_itoa_base.c  ft_list.h  ft_list_foreach.c  ft_list_remove_if.c  ft_split.c  rev_wstr.c  rostring.c  sort_int_tab.c  sort_list.c  test_main.c
